styles.css
.hidden {
  display: none !important;
}

body {
  background-color: rgb(46, 47, 48);
  font-family: 'Barlow Condensed', sans-serif;
}

button {
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 400;
  font-size: 18px;
  border: 2px solid black;
  background-color: rgb(204, 204, 134);
  width: 50px;
  height: 35px;
}

button:hover {
  background-color: rgb(235, 235, 211);
}

a {
  font-family: 'Permanent Marker', cursive;
  border: 2px solid black;
  background-color: rgb(204, 204, 134);
  width: 200px;
  text-align: center;
  padding: 5px 5px;
  text-decoration: none;
  color: black;
}

a:hover {
  background-color: rgb(235, 235, 211);
  color: gray;
}

.navRow {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 1250px;
  margin-top: 1rem;
}

.newBanner {
  background-image: URL(./images/Friends_In_Vice.png);
  background-attachment: fixed;
  background-position: center 9%;
  background-size: auto 625px;
}

.a,
.b,
.c,
.d,
.e {
  width: calc(100 / 5);
  height: 500px;
  transition-duration: 1s;
  color: white;

}

.a {
  margin-top: -10px;
  margin-right: 5px;
}

.b {
  margin-top: 25px;
  margin-right: 5px;
  margin-left: 5px;
}

.c {
  margin-top: 45px;
  margin-right: 5px;
  margin-left: 5px;
}

.d {
  margin-top: 25px;
  margin-left: 5px;
  margin-right: 5px;
}

.e {
  margin-top: -10px;
  margin-left: 5px;
}


.a:hover,
.b:hover,
.c:hover,
.d:hover,
.e:hover {
  color: rgb(214, 140, 155);
  width: 25%;
  height: 550px;
}


.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: auto;
  width: 1000px;
}

.banner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: auto;
}

.posRel {
  position: relative;
}

.title {
  position: absolute;
  top: 10%;
  left: 43%;
  font-family: 'Permanent Marker', cursive;
  font-size: 60px;
  color: white;
  width: 250px;
  text-align: center;
  z-index: 1;
}

.desultory {
  font-family: 'Permanent Marker', cursive;
  font-size: 60px;
  color: white;
  text-align: center;
}

.center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 3%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  width: 700px;
}


.panel {
  position: absolute;
  top: 15%;
  left: 14%;
  width: 500px;
  border: 2px solid black;
}


.frontPageNav {
  margin-top: 4rem;
}

.nextBtnPos {
  position: absolute;
  top: 25%;
  right: 5%;
}

.prevBtnPos {
  position: absolute;
  top: 25%;
  left: 5%;
}

.textDiv {
  color: white;
  font-size: 35px;
}

.p1Text1 {
  position: absolute;
  top: 27%;
  left: 16%;
  width: 400px;
}

.p1Text2 {
  position: absolute;
  top: 2106%;
  left: 58%;
  width: 200px;
}

.p2Text1 {
  position: absolute;
  top: 216%;
  left: 21%;
}

.p2Text2 {
  position: absolute;
  top: 2717%;
  left: 65%;
}

.p3Text1 {
  position: absolute;
  top: 211%;
  left: 41%;
  text-align: center;
}

.p3Text2 {
  position: absolute;
  top: 3026%;
  left: 20%;
  width: 420px;
  text-align: center;
}

.p4Text1 {
  position: absolute;
  top: 130%;
  left: 18%;
  text-align: center;
  width: 450px;
}

.p4Text2 {
  position: absolute;
  top: 3817%;
  left: 32%;
  text-align: center;
}

.p5Text1 {
  position: absolute;
  top: 401%;
  left: 18%;
  text-align: center;
  width: 450px;
}

.p6Img1 {
  position: absolute;
  width: 502px;
  top: -198%;
  left: 14%;
}

.p6Img2 {
  position: absolute;
  width: 550px;
  top: 618%;
  left: 12%;
}

.p7Img1 {
  position: absolute;
  width: 334px;
  top: 467%;
  left: 41%;
}

.p7Text1 {
  position: absolute;
  top: 929%;
  left: 54%;
  color: black;
  width: 100px;
  text-align: center;
  transform: rotate(-16deg);
}

.flicker {
	-webkit-animation: flicker 4s linear infinite both;
	        animation: flicker 4s linear infinite both;
}

.fade-in {
	-webkit-animation: fade-in 4s ease-in;
	        animation: fade-in 4s ease-in;
}


.fade-in-long {
	-webkit-animation: fade-in 6s ease-in;
	        animation: fade-in 6s ease-in;
}

.focus-in {
	-webkit-animation: focus-in 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: focus-in 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

.tracking-out {
	-webkit-animation: tracking-out 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
	        animation: tracking-out 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
}

.tracking-in {
	-webkit-animation: tracking-in 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
	        animation: tracking-in 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
}

@-webkit-keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    opacity: 1;
  }
}
@keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    opacity: 1;
  }
}


@-webkit-keyframes tracking-out {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    letter-spacing: -0.5em;
    opacity: 0;
  }
}
@keyframes tracking-out {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    letter-spacing: -0.5em;
    opacity: 0;
  }
}


@-webkit-keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fade-in-long {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fade-in-long {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes flicker {
  0%,
  100% {
    opacity: 1;
  }
  31.98% {
    opacity: 1;
  }
  32% {
    opacity: 0;
  }
  32.8% {
    opacity: 0;
  }
  32.82% {
    opacity: 1;
  }
  34.98% {
    opacity: 1;
  }
  35% {
    opacity: 0;
  }
  35.7% {
    opacity: 0;
  }
  35.72% {
    opacity: 1;
  }
  36.98% {
    opacity: 1;
  }
  37% {
    opacity: 0;
  }
  37.6% {
    opacity: 0;
  }
  37.62% {
    opacity: 1;
  }
  67.98% {
    opacity: 1;
  }
  68% {
    opacity: 0;
  }
  68.4% {
    opacity: 0;
  }
  68.42% {
    opacity: 1;
  }
  95.98% {
    opacity: 1;
  }
  96% {
    opacity: 0;
  }
  96.7% {
    opacity: 0;
  }
  96.72% {
    opacity: 1;
  }
  98.98% {
    opacity: 1;
  }
  99% {
    opacity: 0;
  }
  99.6% {
    opacity: 0;
  }
  99.62% {
    opacity: 1;
  }
}
@keyframes flicker {
  0%,
  100% {
    opacity: 1;
  }
  31.98% {
    opacity: 1;
  }
  32% {
    opacity: 0;
  }
  32.8% {
    opacity: 0;
  }
  32.82% {
    opacity: 1;
  }
  34.98% {
    opacity: 1;
  }
  35% {
    opacity: 0;
  }
  35.7% {
    opacity: 0;
  }
  35.72% {
    opacity: 1;
  }
  36.98% {
    opacity: 1;
  }
  37% {
    opacity: 0;
  }
  37.6% {
    opacity: 0;
  }
  37.62% {
    opacity: 1;
  }
  67.98% {
    opacity: 1;
  }
  68% {
    opacity: 0;
  }
  68.4% {
    opacity: 0;
  }
  68.42% {
    opacity: 1;
  }
  95.98% {
    opacity: 1;
  }
  96% {
    opacity: 0;
  }
  96.7% {
    opacity: 0;
  }
  96.72% {
    opacity: 1;
  }
  98.98% {
    opacity: 1;
  }
  99% {
    opacity: 0;
  }
  99.6% {
    opacity: 0;
  }
  99.62% {
    opacity: 1;
  }
}

@-webkit-keyframes focus-in {
  0% {
    letter-spacing: -0.5em;
    -webkit-transform: translateZ(-800px);
            transform: translateZ(-800px);
    -webkit-filter: blur(12px);
            filter: blur(12px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    -webkit-filter: blur(0);
            filter: blur(0);
    opacity: 1;
  }
}
@keyframes focus-in {
  0% {
    letter-spacing: -0.5em;
    -webkit-transform: translateZ(-800px);
            transform: translateZ(-800px);
    -webkit-filter: blur(12px);
            filter: blur(12px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    -webkit-filter: blur(0);
            filter: blur(0);
    opacity: 1;
  }
}

@-webkit-keyframes focus-in {
  0% {
    letter-spacing: -0.5em;
    -webkit-transform: translateZ(-800px);
            transform: translateZ(-800px);
    -webkit-filter: blur(12px);
            filter: blur(12px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    -webkit-filter: blur(0);
            filter: blur(0);
    opacity: 1;
  }
}
@keyframes focus-in {
  0% {
    letter-spacing: -0.5em;
    -webkit-transform: translateZ(-800px);
            transform: translateZ(-800px);
    -webkit-filter: blur(12px);
            filter: blur(12px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    -webkit-filter: blur(0);
            filter: blur(0);
    opacity: 1;
  }
}

